--- a/src/scss/projectConfig/_settings.colours.scss
+++ b/src/scss/projectConfig/_settings.colours.scss
@@ -12,7 +12,8 @@ $colour-grey-light      : #3F3F46;
 $colour-grey-xlight     : #ADADAD;
 
 $colour-blue            : #007ACC;
-$colour-green            : #CBC535;
+$colour-green            : #1fbb7a;
+$colour-lime            : #CBC535;
 $colour-orange            : #CE9169;
 $colour-purple            : #9c73b0;
 $colour-red            : #cd3131;
