--- a/src/scss/projectConfig/_settings.colours.scss
+++ b/src/scss/projectConfig/_settings.colours.scss
@@ -4,6 +4,7 @@
 $colour-black       : #000000;
 $colour-white       : #ffffff;
 
+$colour-grey-darker     : #0E0E0E;
 $colour-grey-dark       : #1E1E1E;
 $colour-grey-mid-dark   : #252526;
 $colour-grey-mid        : #2D2D2D;
