- Vertical spacing - Improve text input->area (& vice-versa). Now checks length on input blur - Added new buttons to attach functionality to

--- a/src/scss/projectConfig/_object.accordion-button.scss
+++ b/src/scss/projectConfig/_object.accordion-button.scss
@@ -6,6 +6,10 @@ $accordion-button__icon-size: size(14px);
     display: flex;
     user-select: none;
 
+    &:hover {
+        box-shadow: $drop-shadow;
+    }
+
     &__icon,
     &__text {
         display: block;
