--- a/src/scss/projectConfig/_settings.layout.scss
+++ b/src/scss/projectConfig/_settings.layout.scss
@@ -15,3 +15,5 @@ $column-gutter-default: size(16px) !default;
 
 
 $app-bar-height: size(48px);
+
+$json-data-editor__v-spacing: ($column-gutter-default / 2);
