--- a/src/scss/projectConfig/_settings.colours.scss
+++ b/src/scss/projectConfig/_settings.colours.scss
@@ -27,3 +27,4 @@ $colour-body-bgnd-light-grey  : $colour-grey-mid;
 $colour-body-bgnd-dark-grey   : $colour-grey-dark;
 
 $drop-shadow: rgba($colour-black, 0.2) 0 2px 8px 0 !default;
+$content-darken: rgba($colour-black, 0.6);
