--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,3 +26,4 @@
 
 @import 'projectConfig/_object.accordion-button';
 @import 'projectConfig/_object.json-data-editor';
+@import 'projectConfig/_object.form-input';
