[Modals] - Improve save as new instructions

--- a/src/scss/projectConfig/_object.form-input.scss
+++ b/src/scss/projectConfig/_object.form-input.scss
@@ -24,6 +24,11 @@
         z-index: 2;
     }
 
+    &::placeholder {
+      opacity: 1;
+      color: rgba($colour-white, 0.6);
+    }
+
     &--text {
       
     }
