[Modals] - Added all first, initial verisons of modals

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,3 +27,4 @@
 @import 'projectConfig/_object.accordion-button';
 @import 'projectConfig/_object.json-data-editor';
 @import 'projectConfig/_object.form-input';
+@import 'projectConfig/_object.form-select';
