--- a/src/scss/projectConfig/_object.form-input.scss
+++ b/src/scss/projectConfig/_object.form-input.scss
@@ -57,6 +57,7 @@
       bottom: 0;
       content: '';
       display: none;
+      pointer-events: none;
       position: fixed;
       top: 0;
       left: 0;
