--- a/src/scss/projectConfig/_object.form-input.scss
+++ b/src/scss/projectConfig/_object.form-input.scss
@@ -49,6 +49,7 @@
 
   &__label {
     display: block;
+    pointer-events: none;
     order: 1;
     width: 100%;
 
@@ -57,6 +58,7 @@
       bottom: 0;
       content: '';
       display: none;
+      pointer-events: none;
       position: fixed;
       top: 0;
       left: 0;
