--- a/src/scss/projectConfig/_settings.colours.scss
+++ b/src/scss/projectConfig/_settings.colours.scss
@@ -16,7 +16,7 @@ $colour-blue            : #007ACC;
 $colour-green            : #1fbb7a;
 $colour-lime            : #CBC535;
 $colour-orange            : #CE9169;
-$colour-purple            : #9c73b0;
+$colour-purple            : #7647a2;
 $colour-red            : #cd3131;
 
 $colour-text-default: #CCCCCC;
