--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,3 +28,4 @@
 @import 'projectConfig/_object.json-data-editor';
 @import 'projectConfig/_object.form-input';
 @import 'projectConfig/_object.form-select';
+@import 'projectConfig/_tools.depth-lighten.scss';
