--- a/src/scss/projectConfig/_object.accordion-button.scss
+++ b/src/scss/projectConfig/_object.accordion-button.scss
@@ -1,4 +1,5 @@
-$accordion-button__icon-size: size(14px);
+$accordion-button__icon-size: size(17px);
+$accordion-button__label-spacing: size(6px);
 
 @mixin accordion-button($includeDropShadow: true, $v-padding: false) {
     align-items: center;
@@ -25,7 +26,7 @@ $accordion-button__icon-size: size(14px);
     &__icon {
         height: $accordion-button__icon-size;
         margin-right: $column-gutter-default - $accordion-button__icon-size;
-        stroke-width: 3;
+        stroke-width: 2;
         width: $accordion-button__icon-size;
 
         &.is-hidden {
@@ -34,5 +35,6 @@ $accordion-button__icon-size: size(14px);
     }
 
     &__text {
+        margin-left: $accordion-button__label-spacing;
     }
 }
