--- a/src/scss/projectConfig/_settings.layout.scss
+++ b/src/scss/projectConfig/_settings.layout.scss
@@ -15,5 +15,6 @@ $column-gutter-default: size(16px) !default;
 
 
 $app-bar-height: size(48px);
+$version-number-height: size(20px);
 
 $json-data-editor__v-spacing: ($column-gutter-default / 2);
