--- a/public/yuzu-def-ui/overlay.css
+++ b/public/yuzu-def-ui/overlay.css
@@ -30,6 +30,15 @@
   pointer-events: none;
   opacity: 0.9;
 }
+.yuzu-overlay--is-dragging::after {
+  bottom: 0;
+  content: '';
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
+}
 .yuzu-overlay__resize-handle {
   background-color: #ADADAD;
   box-shadow: rgba(0,0,0, 0.2) 0 2px 8px 0;
