- Highlight block on button click (no longer on open/close data structure). Now scrolls to block - Stop input labels from focusing on the input (removes annoying functionality when trying to blur input) - Position nav links on top of modal/input backdrop - Use word count instead of character count when deciding between a text input/textarea

--- a/public/yuzu-def-ui/overlay.css
+++ b/public/yuzu-def-ui/overlay.css
@@ -3,7 +3,7 @@
 } */
 
 .yuzu-highlighted-block {
-  box-shadow: rgb(255, 0, 0) 0px 0px 0px 3px inset!important;
+  box-shadow: inset 0px 0px 10px 8px rgba(255,0,0,0.8)!important;
 }
 .yuzu-feather-icon {
   fill: none;
