- Auto-complete for image fields ("src" text properties) - Fix for other devices connecting over wifi to machine's localhost- allows naviation only through def-ui - Push "sort" & "delete" buttons into new component ("ArrayEditorActions") & push down into sub-component slots: makes styling far easier & consistent - Styling (mainly vertical spacing... again!)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,7 @@
 @import 'projectConfig/settings.z-indexes';
 
 @import 'projectConfig/_object.accordion-button';
+@import 'projectConfig/object.array-editor-button';
 @import 'projectConfig/_object.json-data-editor';
 @import 'projectConfig/_object.form-input';
 @import 'projectConfig/_object.form-select';
