Fix styling and automatically add visible version number
- Add padding to root properties (e.g. string/boolean) in data tab
- Add help message to data tab, explaining why properties may be missing from view
- Tie visible version number to package version number

--- a/src/scss/projectConfig/_settings.colours.scss
+++ b/src/scss/projectConfig/_settings.colours.scss
@@ -13,11 +13,12 @@ $colour-grey-light      : #3F3F46;
 $colour-grey-xlight     : #ADADAD;
 
 $colour-blue            : #007ACC;
-$colour-green            : #1fbb7a;
+$colour-green-dark      : #019d5c;
+$colour-green           : #1fbb7a;
 $colour-lime            : #CBC535;
-$colour-orange            : #CE9169;
-$colour-purple            : #7647a2;
-$colour-red            : #cd3131;
+$colour-orange          : #CE9169;
+$colour-purple          : #7647a2;
+$colour-red             : #cd3131;
 
 $colour-text-default: #CCCCCC;
 $colour-text-inactive: $colour-grey-xlight;
