Tweak title & icon styling for section titles in data tab

--- a/src/scss/projectConfig/_object.json-data-editor.scss
+++ b/src/scss/projectConfig/_object.json-data-editor.scss
@@ -1,4 +1,18 @@
 @mixin json-data-editor__section($this, $title-v-padding: false) {
+
+    #{$this}__title {
+        max-width: 100%;
+
+        &__icon {
+            flex-shrink: 0;
+        }
+    
+        &__text {      
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
     
     &:not(&--depth-1) {
         > #{$this}__title {
